<resources>
    <string name="app_name">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="enterName">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="nextQ">go to next question</string>
    <string name="submit">submit</string>
    <string name="finish">finish</string>
    <string name="result">Result</string>
    <string name="congrats">Congratulations!</string>
    <string name="image">image</string>
</resources>